# cfr

./: .gitignore  Cargo.toml  README.md  board.json  empty_board.json  rustfmt.toml  words.txt
src/: main.rs
src/cfr/: mod.rs  node.rs  state.rs  trainer.rs
src/cfr/policy/: mod.rs  outcome_sampling.rs
src/cfr/solvers/: mod.rs  outcome_sampling.rs
src/scrabble/: agent.rs  bag.rs  board.rs  constraints.rs  dictionary.rs  gaddag.rs  letter_set.rs  mod.rs  rack.rs  state.rs  util.rs  vocab.rs  word_search.rs
src/scrabble/constraint/: grid.rs  mod.rs  searcher.rs
src/scrabble/ui/: interaction.rs  mod.rs  scrabble_ui.rs  ui_game.rs  util.rs  window.rs
src/tictactoe/: mod.rs
src/utils/: serialization.rs
