[package]
name = "cfr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = {version = "0.15.3", features=["serde"]}
ndarray-rand = "0.14.0"
rand = "0.8.4"
ndarray-stats = "0.5.0"
text_io = "0.1.9"
fst = "0.4.7"
rayon = "1.5.1"
serde = {version = "1.0.132", features=["derive"]}
serde_json = "1.0.73"
bincode = "1.3.3"